--- a/posts/00-hello-world/hello-world.mdx
+++ b/posts/00-hello-world/hello-world.mdx
@@ -5,6 +5,8 @@ date: 06/21/2020
 description: 'post description'
 author: Roger Rondon
 image: images/sara-riano-hello.jpg
+tags: JavaScript
+tech: JavaScript
 ---
 
 ## Testing theme
