--- a/posts/00-hello-world/hello-world.mdx
+++ b/posts/00-hello-world/hello-world.mdx
@@ -4,7 +4,8 @@ slug: hello-world
 date: 06/21/2020
 description: 'post description'
 author: Roger Rondon
-image: images/sara-riano-hello.jpg
+image: ./images/esther-jiao-forms.jpg
+imagesrc: https://unsplash.com/photos/ADv0GiMBlmI
 tags: JavaScript, Forms
 ---
 
